# course_projects_spring_2016

./: README.md
Estuardo_project/: README.md
Estuardo_project/ar_track_alvar/launch/: grovi_ar_localization.launch
Estuardo_project/guide_ar_localization/: CMakeLists.txt  guide_ar_localization.cpp  package.xml
Estuardo_project/guide_face_recog/: CMakeLists.txt  guide_face_recog.cpp  package.xml
Estuardo_project/guide_navigation_feedback/: CMakeLists.txt  guide_navigation_feedback.cpp  package.xml
Estuardo_project/guide_voice_commands/: CMakeLists.txt  guide_voice_commands.cpp  package.xml
Estuardo_project/guide_voice_commands/speech/: speech_kb
Estuardo_project/guide_voice_commands/speech/TAR4422/: 4422.dic  4422.lm  4422.log_pronounce  4422.sent  4422.vocab
Estuardo_project/pocketsphinx/launch/: grovi_voice_commands.launch
Estuardo_project/turtlebot_navigation/maps/: kingsMap.pgm  kingsMap.yaml
Estuardo_project/turtlebot_navigation/param/: move_base_params.yaml
Estuardo_project/usb_cam/launch/: usb_cam_face_recog.launch
